[master] adding comments
Branch: [master]

--- a/app/app.css
+++ b/app/app.css
@@ -17,7 +17,8 @@ body {
     margin-bottom: 2em;
     padding: 0 0 0.5em;
 }
-.tabs-container{
+
+.tabs-container {
     width: 100%;
 }
 
@@ -49,7 +50,8 @@ body {
 .tumbler-image:hover {
     padding: 2px;
 }
-.info-container-page2{
+
+.info-container-page2 {
     max-width: 512px;
     margin: 0 auto;
 }
@@ -57,32 +59,35 @@ body {
 .user-avater:hover {
     border: 2px solid black;
 }
-.blog-name{
+
+.blog-name {
     font-weight: bold;
     font-size: large;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-.project-title{
+
+.project-title {
     text-align: center;
 }
 
-.page2-view{
+.page2-view {
     width: 100%;
 }
-.text-container-page-2{
+
+.text-container-page-2 {
     margin: 0 auto;
-    width:256px;
+    width: 256px;
 }
 
-.post-title{
+.post-name-and-url {
     margin: 5px 0px;
     text-overflow: ellipsis;
     /* Required for text-overflow to do anything */
     white-space: nowrap;
     overflow: hidden;
 }
-.post-info{
+
+.blog-info-container {
     text-align: center;
     margin: 10px 0px;
-
 }
